[package]
name = "basic_sparse_matrix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.release]
lto = true

[profile.bench]
opt-level = 3
debug = false
split-debuginfo = '...'  # Platform-specific.
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

[dev-dependencies]
criterion = "0.3"
rand = "0.8.5"

[[bench]]
name = "sparse_dense_mul"
harness = false